--- a/page2.html
+++ b/page2.html
@@ -2,8 +2,8 @@
 <html lang="Default">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="">
-    <meta name="description" content="">
+    <meta name="robots" content="follow, index">
+    <meta name="description" content="L'agence La Panthère est une entreprise de webdesign basée à Lyon. Nous aidons les entreprises de la région Lyonnaise à être visibles sur Internet, pour se développer et attirer de nouveaux clients.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
