--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 	<script src="./js/blocs.min.js"></script>
 	<script src="./js/jqBootstrapValidation.min.js"></script>
 	<script src="./js/formHandler.min.js"></script>
-
-    <title>.</title>
+    <title>Agence La Panthère</title>
 
     
 <!-- Analytics -->
