--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,8 @@
 <body>
 <!-- Principal conteneur -->
 <div class="page-container">
-    
+
+<header>
 <!-- bloc-0 -->
 <div class="bloc bgc-white l-bloc " id="bloc-0">
 	<div class="container bloc-sm">
@@ -72,7 +73,9 @@
 	</div>
 </div>
 <!-- bloc-6 END -->
+</header>
 
+<section>
 <!-- bloc-7 -->
 <div class="bloc bgc-white l-bloc" id="bloc-7">
 	<div class="container bloc-lg">
@@ -116,12 +119,13 @@
 	</div>
 </div>
 <!-- bloc-7 END -->
+</section>
 
 <!-- ScrollToTop Button -->
 <a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
 <!-- ScrollToTop Button END-->
 
-
+<footer>
 <!-- Footer - bloc-8 -->
 <div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 	<div class="container bloc-sm">
@@ -157,6 +161,7 @@
 	</div>
 </div>
 <!-- Footer - bloc-8 END -->
+</footer>
 
 </div>
 <!-- Principal conteneur END -->
