--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 <!-- Principal conteneur -->
 <div class="page-container">
     
+<header>
 <!-- bloc-0 -->
 <div class="bloc bgc-white l-bloc " id="bloc-0">
 	<div class="container bloc-sm">
@@ -73,7 +74,9 @@
 	</div>
 </div>
 <!-- bloc-1-presentation END -->
+</header>
 
+<section>
 <!-- bloc-2-services -->
 <div class="bloc bgc-white l-bloc" id="bloc-2-services">
 	<div class="container bloc-md">
@@ -126,7 +129,9 @@
 	</div>
 </div>
 <!-- bloc-2-services END -->
+</section>
 
+<section>
 <!-- bloc-3-what-i-do -->
 <div class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
 	<div class="container bloc-lg">
@@ -143,7 +148,9 @@
 	</div>
 </div>
 <!-- bloc-3-what-i-do END -->
+</section>
 
+<section>
 <!-- bloc-4-portfolio -->
 <div class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
 	<div class="container bloc-lg">
@@ -195,7 +202,9 @@
 	</div>
 </div>
 <!-- bloc-4-portfolio END -->
+</section>
 
+<section>
 <!-- bloc-5-cta -->
 <div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 	<div class="container bloc-lg">
@@ -210,7 +219,9 @@
 	</div>
 </div>
 <!-- bloc-5-cta END -->
+</section>
 
+<footer>
 <!-- Footer - bloc-8 -->
 <div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 	<div class="container bloc-sm">
@@ -246,6 +257,7 @@
 	</div>
 </div>
 <!-- Footer - bloc-8 END -->
+</footer>
 
 </div>
 <!-- Principal conteneur END -->
