--- a/contact.html
+++ b/contact.html
@@ -132,7 +132,7 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<p class="text-center white">
-					Agence La Panthère - Agence web basée à Lyon.
+					Agence La Panthère - Agence webdesign basée à Lyon.
 				</p>
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
