--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			<div class="col-sm-12">
 				<img src="img/logo.png" class="center-block image-resize-mode" alt="agence la panthere logo" />
 				<h1 class="text-center hero-bloc-text tc-white ">
-					Agence La Panthère
+					Agence La Panthère<br>Entreprise de webdesign à Lyon
 				</h1>
 				<div class="text-center">
 					<a title="Nous contacter" href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
@@ -82,7 +82,7 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<p class="agence-description">L'agence La Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.</p>
+				<p class="agence-description">L'agence La Panthère est une agence de web design qui aide les entreprises dans le secteur de Lyon à devenir attractives et visibles sur Internet.</p>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -228,7 +228,7 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<p class="text-center white">
-					Agence La Panthère - Agence web basée à Lyon.
+					Agence La Panthère - Agence webdesign basée à Lyon.
 				</p>
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
