--- a/index.html
+++ b/index.html
@@ -63,9 +63,10 @@
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
 				<img src="img/test.png" class="center-block image-resize-mode small-logo" alt="agence la panthere logo" />
-				<h1 class="text-center hero-bloc-text tc-white ">
-					Agence La Panthère<br>Entreprise de webdesign à Lyon
+				<h1 class="text-center hero-bloc-text tc-white">
+					Agence La Panthère
 				</h1>
+				<h2 class="text-center hero-bloc-text tc-white subtitle">Entreprise de webdesign à Lyon</h2>
 				<div class="text-center">
 					<a title="Nous contacter" href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 				</div>
