--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="img/test.png" class="center-block image-resize-mode small-logo" alt="agence la panthere logo" />
+				<img src="img/logo.png" class="center-block image-resize-mode small-logo" alt="agence la panthere logo" />
 				<h1 class="text-center hero-bloc-text tc-white">
 					Agence La Panthère
 				</h1>
