--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 				<h1 class="text-center hero-bloc-text tc-white">
 					Agence La Panthère
 				</h1>
-				<h2 class="text-center hero-bloc-text tc-white subtitle">Entreprise de webdesign à Lyon</h2>
+				<h2 class="text-center tc-white subtitle">Entreprise de webdesign à Lyon</h2>
 				<div class="text-center">
 					<a title="Nous contacter" href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 				</div>
